2003-08-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (write_aclocal): Take an output file and list of
	used macros in arguments and make up the file contents here.
	(trace_used_macros): New function.
	(add_file): Do not update $output.
	($output): Delete.
	(MAIN): Call trace_used_macros.  Then rewrite aclocal.m4 only
	for these traced macros.  This should shorten aclocal.m4 by
	stripping out unused macros.
	* automake.texi (Invoking aclocal): Document ${AUTOM4TE}.
	* tests/aclibobj.test: Make sure configure.in exists by the time
	aclocal runs.
	* tests/aclocal8.test: New file.
	* tests/Makefile.am (TESTS): Add aclocal8.test.
	Suggested by Bruno Haible and Akim Demaille.

2003-08-21  Akim Demaille  <akim@epita.fr>

	* lib/Automake/Configure_ac.pm (&find_configure_ac)
	(&require_configure_ac): Accept an optional directory argument.
	($configure_ac): Remove.
	* aclocal.in, automake.in ($configure_ac): New.
	* lib/Automake/Variable.pm: Don't use $configure_ac, just
	configure.ac.

2003-08-20  Akim Demaille  <akim@epita.fr>

	* lib/Automake/FileUtils.pm: More perldoc.
	(&up_to_date_p): New.

2003-08-17  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/398:
	* m4/python.m4: Do not call AC_PATH_PROGS if $PYTHON is already
	set.  Display `none' instead of `:' and $PYTHON is set to `:'
	when no suitable interpreter is found.  Honor ACTION-IF-FOUND and
	ACTION-IF-NOT-FOUND.
	* automake.texi (Python): Document ACTION-IF-FOUND and
	ACTION-IF-NOT-FOUND.
	* tests/python4.test, tests/python5.test, tests/python6.test,
	tests/python7.test, tests/python8.test, tests/python9.test: New
	files.
	* tests/Makefile.am (TESTS): Add them.
	Report from Per Cederqvist.

2003-08-13  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/399:
	* m4/python.m4: Use AC_PATH_PROGS, not AC_PATH_PROG.
	Report from Per Cederqvist.

2003-08-12  Raja R Harinath  <harinath@acm.org>

	* lib/Automake/Condition.pm (strip): Replace loop with 'grep'.
	(not): Replace loop with 'map'.