@@ -5728,7 +5728,7 @@ sub file_contents_internal ($$$%)
 		  &depend ($_, @deps);
 		  if ($actions{$_})
 		    {
-		      $actions{$_} .= "\n$actions";
+		      $actions{$_} .= "\n$actions" if $actions;
 		    }
 		  else
 		    {
