@@ -1,5 +1,8 @@
 2003-08-24  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (file_contents_internal): Do not add newlines before
+	empty actions.
+
 	* aclocal.in (write_aclocal): Take an output file and list of
 	used macros in arguments and make up the file contents here.
 	(trace_used_macros): New function.
